tests/NormalTests/paczka2/big_fuzzy/57954202.err
Error in line 3: S32 S846 55,4
Error in line 4: Fu1g S720 50,2
Error in line 14: 1mbdMZ A853 5,7
Error in line 7: S32 S720 44,1
Error in line 17: iVhuk S720 19,9
Error in line 19: XUDm S32 55,3
Error in line 21: iVhuk S32 30,0
Error in line 32: XUDm A853 64,3
Error in line 60: KGW A853 75,3
Error in line 55: Fu1g S32 21,7
Error in line 63: KGW S846 17,3
Error in line 67: XUDm A853 85,4
Error in line 83: S32 S846 1,4
Error in line 94: KGW A853 44,1
Error in line 68: FofQkM S720 8,2
Error in line 110: S32 S846 64,5
Error in line 113: S32 A853 48,8
Error in line 116: 1mbdMZ A?53 61,4
Error in line 104: KGW S846 14,9
Error in line 115: S32 S720 20,9
Error in line 121: S32 A853 51,9
Error in line 133: KGW S720 87,3
Error in line 137: Fu1g A853 11,26
Error in line 135: iVhuk S846 38,6
Error in line 139: Fu1g A853 3,9
Error in line 136: 1mbdMZ A853 149,2
Error in line 147: FofQkM S846 70,1
Error in line 170: KGW A853 238,80
Error in line 153: 1mbdMZ S32 21,5
Error in line 179: XUDm A853 79,5
Error in line 177: KGW S846 64,2
Error in line 175: S32 S32 24,5
Error in line 200: iVhuk A853 80,9
Error in line 202: iVhuk S846 58,4
Error in line 238: FofQkM S32 11,1
Error in line 243: S32 S32 113,1
Error in line 237: 1mbdMZ S720 23,4
